--- a/index.ipynb
+++ b/index.ipynb
@@ -428,7 +428,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.get_dataset_names()"
+   ]
   },
   {
    "cell_type": "markdown",
