Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -479,11 +479,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tips = sns.load_\n"
+    "tips = sns.load_dataset('tips')\n"
    ]
   },
   {
