--- a/index.ipynb
+++ b/index.ipynb
@@ -506,7 +506,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.lmplot()"
+   ]
   },
   {
    "cell_type": "markdown",
