--- a/index.ipynb
+++ b/index.ipynb
@@ -507,7 +507,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.lmplot(x='total_bill', y='tip')"
+    "sns.lmplot(x='total_bill', y='tip', hue='smoker', data=)"
    ]
   },
   {
