Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -656,7 +656,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sns.lmplot(x='total_bill', y='tip', r hue='smoker', data=tips)"
+   ]
   },
   {
    "cell_type": "markdown",
