--- a/index.ipynb
+++ b/index.ipynb
@@ -657,7 +657,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.lmplot(x='total_bill', y='tip', r hue='smoker', data=tips)"
+    "sns.lmplot(x='total_bill', y='tip', row = 5, column, 9, hue='smoker', data=tips)"
    ]
   },
   {
