Automatically backed up by Learn

--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -686,7 +686,7 @@
     }
    ],
    "source": [
-    "sns.lmplot(x='total_bill', y='tip', hue='smoker', data=tips, row='time')"
+    "sns.lmplot(x='total_bill', y='tip', hue='smoker', data=tips)"
    ]
   },
   {
